attempt to get monocle working without testfx